projects/k8-project-2/staging/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow-only-app
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: postgres       # label on your PostgreSQL pod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web   # only this app can reach Postgres
      ports:
        - protocol: TCP
          port: 5432
